[gd_scene load_steps=13 format=4 uid="uid://dnyvqqurctaia"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_ftikw"]
[ext_resource type="Texture2D" uid="uid://bob6rf375sgje" path="res://assets/Sprout Lands/Tilesets/Wooden_House_Walls_Tilset.png" id="1_w3u8h"]
[ext_resource type="PackedScene" uid="uid://cmic438xapftt" path="res://scenes/seeker.tscn" id="2_swfk5"]
[ext_resource type="PackedScene" uid="uid://bjweaiegmbxwx" path="res://scenes/hider.tscn" id="3_h78yd"]
[ext_resource type="Texture2D" uid="uid://bc4s1dt5a36eq" path="res://assets/Sprout Lands/Tilesets/Grass.png" id="4_uvh3p"]
[ext_resource type="Script" path="res://scripts/back_menu.gd" id="4_v7vmh"]
[ext_resource type="FontFile" uid="uid://dyxv40j2au36r" path="res://fonts/Daydream.ttf" id="5_ggqtm"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wwlrs"]
texture = ExtResource("1_w3u8h")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u7ehn"]
texture = ExtResource("4_uvh3p")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0

[sub_resource type="TileSet" id="TileSet_jgbri"]
sources/0 = SubResource("TileSetAtlasSource_wwlrs")
sources/1 = SubResource("TileSetAtlasSource_u7ehn")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hbjgb"]
texture = ExtResource("4_uvh3p")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0

[sub_resource type="TileSet" id="TileSet_33vx3"]
sources/0 = SubResource("TileSetAtlasSource_hbjgb")

[node name="game" type="Node2D"]
script = ExtResource("1_ftikw")
seeker_scene = ExtResource("2_swfk5")
hider_scene = ExtResource("3_h78yd")

[node name="start_camera" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="map" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD/////AQABAAEAAAAAAP//AQABAAEAAAAAAAAAAQABAAEAAAD//wAAAQABAAEAAAD+//7/AQADAAUAAAD///7/AQABAAEAAAAAAP7/AQABAAEAAAABAP7/AQABAAEAAAABAP//AQAAAAUAAAABAAAAAQABAAEAAAABAAEAAQABAAEAAAABAAIAAQABAAEAAAAAAAIAAQABAAEAAAAAAAEAAQABAAEAAAD//wEAAQAAAAYAAAD+/wEAAQABAAEAAAD+/wAAAQABAAEAAAD+////AQABAAEAAAD+/wIAAQABAAEAAAD//wIAAQABAAEAAAACAAIAAQAAAAUAAAACAAEAAQABAAEAAAACAAAAAQABAAEAAAACAP//AQABAAEAAAACAP7/AQABAAEAAAACAP3/AQABAAEAAAABAP3/AQABAAEAAAAAAP3/AQABAAEAAAD///3/AQABAAEAAAD+//3/AQABAAEAAAD9//3/AQAAAAUAAAD9//7/AQABAAEAAAD9////AQAAAAYAAAD9/wAAAQABAAEAAAD9/wEAAQABAAEAAAD9/wIAAQABAAEAAAD8//z/AQABAAEAAAD9//z/AQABAAEAAAD+//z/AQABAAEAAAD///z/AQABAAEAAAAAAPz/AQABAAEAAAABAPz/AQABAAEAAAACAPz/AQABAAEAAAADAPz/AQABAAEAAAADAP3/AQAAAAYAAAADAP7/AQABAAEAAAADAP//AQABAAEAAAADAAAAAQABAAEAAAADAAEAAQABAAEAAAADAAIAAQABAAEAAAADAAMAAQABAAEAAAACAAMAAQABAAEAAAABAAMAAQAEAAUAAAAAAAMAAQABAAEAAAD//wMAAQABAAEAAAD+/wMAAQABAAEAAAD9/wMAAQAAAAUAAAD8/wMAAQABAAEAAAD8/wIAAQABAAEAAAD8/wEAAQABAAEAAAD8/wAAAQABAAEAAAD8////AQABAAEAAAD8//7/AQABAAEAAAD8//3/AQABAAEAAAD7/wQAAQAAAAIAAAD7/wMAAQAAAAEAAAD7/wIAAQAAAAEAAAD7/wEAAQAAAAEAAAD7/wAAAQAAAAEAAAD7////AQAAAAEAAAD7//7/AQAAAAEAAAD7//3/AQAAAAEAAAD7//z/AQAAAAEAAAD7//v/AQAAAAAAAAD8/wQAAQABAAIAAAD9/wQAAQABAAIAAAD+/wQAAQABAAIAAAD//wQAAQABAAIAAAAAAAQAAQABAAIAAAABAAQAAQABAAIAAAACAAQAAQABAAIAAAADAAQAAQABAAIAAAAEAAQAAQACAAIAAAAEAAMAAQACAAEAAAAEAAIAAQACAAEAAAAEAAEAAQACAAEAAAAEAAAAAQACAAEAAAAEAP//AQACAAEAAAAEAP7/AQACAAEAAAAEAP3/AQACAAEAAAADAPv/AQABAAAAAAAEAPz/AQACAAEAAAAEAPv/AQACAAAAAAACAPv/AQABAAAAAAABAPv/AQABAAAAAAAAAPv/AQABAAAAAAD///v/AQABAAAAAAD+//v/AQABAAAAAAD9//v/AQABAAAAAAD8//v/AQABAAAAAAA=")
tile_set = SubResource("TileSet_jgbri")

[node name="map_details" type="TileMapLayer" parent="."]
visible = false
tile_set = SubResource("TileSet_33vx3")

[node name="start_menu" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="start_menu"]
offset_right = 1280.0
offset_bottom = 720.0

[node name="start_container" type="VBoxContainer" parent="start_menu/CenterContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="host_button" type="Button" parent="start_menu/CenterContainer/start_container"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_ggqtm")
theme_override_font_sizes/font_size = 20
text = "Host"

[node name="join_button" type="Button" parent="start_menu/CenterContainer/start_container"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_ggqtm")
theme_override_font_sizes/font_size = 20
text = "Join"

[node name="back_button_start" type="Button" parent="start_menu/CenterContainer/start_container"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_ggqtm")
theme_override_font_sizes/font_size = 20
text = "Back"

[node name="choose_menu" type="CanvasLayer" parent="."]
visible = false

[node name="CenterContainer" type="CenterContainer" parent="choose_menu"]
offset_right = 1280.0
offset_bottom = 720.0

[node name="choose_container" type="VBoxContainer" parent="choose_menu/CenterContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="seeker_button" type="Button" parent="choose_menu/CenterContainer/choose_container"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_ggqtm")
theme_override_font_sizes/font_size = 20
text = "Play as Seeker"

[node name="hider_button" type="Button" parent="choose_menu/CenterContainer/choose_container"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_ggqtm")
theme_override_font_sizes/font_size = 20
text = "Play as Hider"

[node name="back_button_choose" type="Button" parent="choose_menu/CenterContainer/choose_container"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_ggqtm")
theme_override_font_sizes/font_size = 20
text = "Back"

[node name="back_menu" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("4_v7vmh")

[node name="CenterContainer" type="CenterContainer" parent="back_menu"]
offset_right = 1280.0
offset_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="back_menu/CenterContainer"]
layout_mode = 2

[node name="continue_button" type="Button" parent="back_menu/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Continue"

[node name="quit_button" type="Button" parent="back_menu/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Quit to Title Screen"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/seeker.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="start_menu/CenterContainer/start_container/host_button" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="start_menu/CenterContainer/start_container/join_button" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="start_menu/CenterContainer/start_container/back_button_start" to="." method="_on_back_button_start_pressed"]
[connection signal="pressed" from="choose_menu/CenterContainer/choose_container/seeker_button" to="." method="_on_seeker_button_pressed"]
[connection signal="pressed" from="choose_menu/CenterContainer/choose_container/hider_button" to="." method="_on_hider_button_pressed"]
[connection signal="pressed" from="choose_menu/CenterContainer/choose_container/back_button_choose" to="." method="_on_back_button_choose_pressed"]
[connection signal="pressed" from="back_menu/CenterContainer/VBoxContainer/continue_button" to="back_menu" method="_on_continue_button_pressed"]
[connection signal="pressed" from="back_menu/CenterContainer/VBoxContainer/quit_button" to="back_menu" method="_on_quit_button_pressed"]
